# tokemak-lp

./: .gitignore  config.py  main.py  main_archive_node.py  pyproject.toml  requirements.txt  utils.py
archive_node/: node.py
data/: block_date_map.csv  final_lp_stats.csv  research_universe.csv
data/Node/: 0x21b8065d10f73ee2e260e5b47d3344d3ced7596e_summary.csv  0xe3d3551bb608e7665472180a20280630d9e938aa_summary.csv
